samples/_failures_safe/1761391369_4c8a99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04e2611d.c: In function ‘main’:
./samples/SAFE/__tmp_04e2611d.c:161:13: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  161 |             print
      |             ^~~~~
      |             printf
./samples/SAFE/__tmp_04e2611d.c:161:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_04e2611d.c:161:18: error: expected ‘;’ at end of input
  161 |             print
      |                  ^
      |                  ;
./samples/SAFE/__tmp_04e2611d.c:161:13: error: expected declaration or statement at end of input
  161 |             print
      |             ^~~~~
./samples/SAFE/__tmp_04e2611d.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_04e2611d.c:161:13: error: expected declaration or statement at end of input
